完成登录,找密码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         <activity android:name=".Modules.postPost.AddNewCaseActivity" />
         <activity android:name=".Modules.postList.ListPostActivity" />
         <activity android:name=".Modules.postPost.UpadateCaseActivity" />
+        <activity android:name=".Modules.LoginWorker.LoginWorkerActivity" />
+        <activity android:name=".Modules.LoginWorker.NewPasswordActivity" />
+
         <activity
             android:name="com.yanzhenjie.album.AlbumActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
