--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,11 @@ dependencies {
     //运行时权限
     compile 'com.yanzhenjie:permission:1.0.3'
     compile 'com.yanzhenjie:album:1.0.0'
-
+    //eventbus3.0
+    compile 'org.greenrobot:eventbus:3.0.0'
+    //photoView
+//    compile 'com.github.chrisbanes:PhotoView:latest.release.here'
+    compile 'com.zhy:autolayout:1.4.5'
 
 
 }
