--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     //photoView
 //    compile 'com.github.chrisbanes:PhotoView:latest.release.here'
     compile 'com.zhy:autolayout:1.4.5'
+    //进度条(第三方加载动画 Android-SpinKit)https://github.com/ybq/Android-SpinKit
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
 
 
 }
