--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".Modules.postPost.UpadateCaseActivity" />
         <activity android:name=".Modules.LoginWorker.LoginWorkerActivity" />
         <activity android:name=".Modules.LoginWorker.NewPasswordActivity" />
+        <activity android:name=".Modules.postPost.PhotoBigActivity" />
 
         <activity
             android:name="com.yanzhenjie.album.AlbumActivity"
