--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':recyclerViewlibrary', ':library_downMenue', ':pictruetest'
+include ':app', ':recyclerViewlibrary', ':library_downMenue', ':pictruetest', ':skeleton', ':wxtest'
