--- a/NiceVieoPlayer/build.gradle
+++ b/NiceVieoPlayer/build.gradle
@@ -31,4 +31,11 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.github.MagicMashRoom:SuperCalendar:v1.3.1'
+    //第三方视频封装https://github.com/xiaoyanger0825/NiceVieoPlayer
+    compile 'com.github.xiaoyanger0825:NiceVieoPlayer:v2.0'
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
